<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fuse_optimizers</name>
  <version>1.0.1</version>
  <description>
    The fuse_optimizers package provides a set of optimizer implementations. An optimizer is the object responsible \
    for coordinating the sensors and motion model inputs, computing the optimal state values, and providing access to \
    to the optimal state via the publishers.
  </description>

  <maintainer email="swilliams@locusrobotics.com">Stephen Williams</maintainer>
  <license>BSD</license>
  <author email="swilliams@locusrobotics.com">Stephen Williams</author>
  <author email="tmoore@locusrobotics.com">Tom Moore</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>boost</depend>
  <depend>libceres-dev</depend>
  <depend>eigen</depend>

  <build_depend>diagnostic_updater</build_depend>
  <build_depend>fuse_constraints</build_depend>
  <build_depend>fuse_core</build_depend>
  <build_depend>fuse_msgs</build_depend>
  <build_depend>fuse_graphs</build_depend>
  <build_depend>fuse_variables</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>fuse_constraints</exec_depend>
  <exec_depend>fuse_core</exec_depend>
  <exec_depend>fuse_msgs</exec_depend>
  <exec_depend>fuse_graphs</exec_depend>
  <exec_depend>fuse_variables</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>fuse_models</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>nav_msgs</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_pytest</test_depend>
  <test_depend>rclcpp</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
