<?xml version="1.0"?>
<package format="2">
  <name>fuse_publishers</name>
  <version>0.4.2</version>
  <description>
    The fuse_publishers package provides a set of common publisher plugins.
  </description>

  <maintainer email="swilliams@locusrobotics.com">Stephen Williams</maintainer>
  <author email="swilliams@locusrobotics.com">Stephen Williams</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>fuse_core</depend>
  <depend>fuse_variables</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>fuse_constraints</test_depend>
  <test_depend>fuse_graphs</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <fuse_core plugin="${prefix}/fuse_plugins.xml" />
  </export>
</package>
